<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header1"
        app:layout_constraintBottom_toBottomOf="@+id/middle1"
        app:layout_constraintEnd_toStartOf="@+id/middle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middle1" />

    <TextView
        android:id="@+id/middle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/header2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header3"
        app:layout_constraintBottom_toBottomOf="@+id/middle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle1"
        app:layout_constraintTop_toTopOf="@+id/middle1" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/T"
        app:layout_constraintBottom_toBottomOf="@+id/middle2"
        app:layout_constraintEnd_toStartOf="@+id/middle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middle2" />

    <TextView
        android:id="@+id/middle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/T"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle1" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:text=""
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toBottomOf="@+id/middle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle2"
        app:layout_constraintTop_toTopOf="@+id/middle2"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/T"
        app:layout_constraintBottom_toBottomOf="@+id/middle3"
        app:layout_constraintEnd_toStartOf="@+id/middle3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middle3" />

    <TextView
        android:id="@+id/middle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle2" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:text=""
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toBottomOf="@+id/middle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle3"
        app:layout_constraintTop_toTopOf="@+id/middle3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/F"
        app:layout_constraintBottom_toBottomOf="@+id/middle4"
        app:layout_constraintEnd_toStartOf="@+id/middle4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middle4" />

    <TextView
        android:id="@+id/middle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/T"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle3" />

    <EditText
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:text=""
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toBottomOf="@+id/middle4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle4"
        app:layout_constraintTop_toTopOf="@+id/middle4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/F"
        app:layout_constraintBottom_toBottomOf="@+id/middle5"
        app:layout_constraintEnd_toStartOf="@+id/middle5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middle5" />

    <TextView
        android:id="@+id/middle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/T"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle4" />

    <EditText
        android:id="@+id/answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:text=""
        android:maxLength="1"
        android:digits="TF"
        app:layout_constraintBottom_toBottomOf="@+id/middle5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle5"
        app:layout_constraintTop_toTopOf="@+id/middle5" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitBtnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle5" />


</androidx.constraintlayout.widget.ConstraintLayout>